# ceevee

./: README.adoc  generate.py  patch_version.sh  publish_ceevee.py  publish_version.sh  pyproject.toml
.github/workflows/: build.yml
ceevee/: __init__.py
resources/themes/: resume-theme.yml
