[tool.poetry]
name = "resumé"
version = "0.1.0"
description = "Asciidoc version of my resumé"
authors = ["Joshua Reynolds <jreynolds@electrichand.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
dagger-io = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
